--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,5 +26,5 @@ phases:
 
 artifacts:
   files:
-    - '**/*'
-  base-directory: 'build'  # This directs AWS CodeBuild to package everything inside the 'build' directory
+    - 'build/**/*'
+  base-directory: 'build'
