--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     runtime-versions:
       nodejs: 20
     commands:
-      - npm ci --cache .npm --prefer-offline
+      - npm install
   build:
     commands:
       - npm run build
